fixed padding in post.css; text was offcenter

--- a/_sass/klise/_post.scss
+++ b/_sass/klise/_post.scss
@@ -126,7 +126,7 @@
   > p {
     margin: 15;
     padding-left: 0px;   /* Increase this value to widen the left margin */
-    padding-right: 30px;
+    padding-right: 10px;
     padding-top: $spacing-full - 15;
     padding-bottom: $spacing-full - 15;
   }
